--- a/app.secre.yml
+++ b/app.secre.yml
@@ -2,5 +2,7 @@ apiVersion: v1
 kind: secret
 metadata:
   name: app.secret
-spec:
-  containers:
+type: opaque
+data:
+  db-pass: LW0gbmRlaAo=
+  rmq-pass: LW0gbmRlaDIwMjAK
